@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.999375-24
-Date: 2008-08-06
+Version: 0.999375-25
+Date: 2008-08-..
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu>,
         Martin Maechler <maechler@R-project.org> and
